--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ def supportLibVersion = '26.1.0'
 def retrofitVersion = '2.3.0'
 def butterKnifeVersion = '8.8.1'
 def daggerVersion = '2.13'
+def autoValueVersion ='1.5.1'
+def autoValueMoshiVersion ='0.4.5'
 
 
 dependencies {
@@ -45,6 +47,12 @@ dependencies {
 
     implementation "com.google.dagger:dagger:$daggerVersion"
     annotationProcessor "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    compileOnly "com.google.auto.value:auto-value:$autoValueVersion"
+    annotationProcessor "com.google.auto.value:auto-value:$autoValueVersion"
+
+    annotationProcessor "com.ryanharter.auto.value:auto-value-moshi:$autoValueMoshiVersion"
+    compileOnly "com.ryanharter.auto.value:auto-value-moshi-annotations:$autoValueMoshiVersion"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
